--- a/study-uk/source/sass/blocks/review.scss
+++ b/study-uk/source/sass/blocks/review.scss
@@ -71,6 +71,10 @@
 }
 
 @media screen and ($mobile) {
+  .review {
+    padding-top: 0;
+  }
+  
   .review__wrapper {
     flex-direction: column;
   }
