--- a/study-uk/source/sass/style.scss
+++ b/study-uk/source/sass/style.scss
@@ -15,3 +15,6 @@
 @import 'blocks/needed';
 @import 'blocks/study';
 @import 'blocks/review';
+@import 'blocks/contact';
+@import 'blocks/request';
+@import 'blocks/footer';
