--- a/study-uk/source/sass/blocks/study.scss
+++ b/study-uk/source/sass/blocks/study.scss
@@ -1,7 +1,7 @@
 .study {
-  padding: 140px 0;
+  padding: 160px 0;
   background-color: $blue;
-  background-image: url('../img/study-bg.png');
+  background-image: url('../img/study-bg.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -95,3 +95,31 @@
   }
 }
 
+@media screen and ($mobile) {
+  .study__subtitle {
+    margin-top: 5px;
+    font-size: 20px;
+  }
+  
+  .study__numbers {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .study__box {
+    margin-bottom: 20px;
+    
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  
+  .study__list {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .study__item {
+    width: auto;
+  }
+}
